fix: update homepage title in multiple languages to reflect new site URL

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -21,7 +21,7 @@
   "settings": "الإعدادات",
   "help-and-feedback": "المساعدة والتعليقات",
   "logout": "تسجيل الخروج",
-  "heroui-com-homepage": "الصفحة الرئيسية لـ heroui.com",
+  "site-homepage": "sctg.eu.org الصفحة الرئيسية",
   "powered-by": "مدعوم بواسطة",
   "websites-regardless-of-your-design-experience": "مواقع ويب بغض النظر عن خبرتك في التصميم.",
   "beautiful-fast-and-modern-react-ui-library": "مكتبة واجهة مستخدم لـ React جميلة وسريعة وحديثة.",
