--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -21,7 +21,7 @@
   "settings": "Settings",
   "help-and-feedback": "Help & Feedback",
   "logout": "Logout",
-  "heroui-com-homepage": "heroui.com homepage",
+  "site-homepage": "sctg.eu.org homepage",
   "powered-by": "Powered by",
   "websites-regardless-of-your-design-experience": "websites regardless of your design experience.",
   "beautiful-fast-and-modern-react-ui-library": "Beautiful, fast and modern React UI library.",
