--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -21,7 +21,7 @@
   "settings": "Configuración",
   "help-and-feedback": "Ayuda y comentarios",
   "logout": "Cerrar sesión",
-  "heroui-com-homepage": "Página principal de heroui.com",
+  "site-homepage": "sctg.eu.org Página de inicio",
   "powered-by": "Desarrollado por",
   "websites-regardless-of-your-design-experience": "sitios web sin importar su experiencia en diseño.",
   "beautiful-fast-and-modern-react-ui-library": "Una biblioteca UI para React hermosa, rápida y moderna.",
