--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -21,7 +21,7 @@
   "settings": "Paramètres",
   "help-and-feedback": "Aide & Commentaires",
   "logout": "Déconnexion",
-  "heroui-com-homepage": "Page d'accueil heroui.com",
+  "site-homepage": "page d'accueil sctg.eu.org",
   "powered-by": "Propulsé par",
   "websites-regardless-of-your-design-experience": "sites web quelle que soit votre expérience en design.",
   "beautiful-fast-and-modern-react-ui-library": "Une bibliothèque UI pour React belle, rapide et moderne.",
