--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -21,7 +21,7 @@
   "settings": "הגדרות",
   "help-and-feedback": "עזרה ומשוב",
   "logout": "התנתק",
-  "heroui-com-homepage": "דף הבית של heroui.com",
+  "site-homepage": "SCTG.EU.org",
   "powered-by": "מופעל על ידי",
   "websites-regardless-of-your-design-experience": "אתרים ללא קשר לניסיון העיצוב שלך.",
   "beautiful-fast-and-modern-react-ui-library": "ספריית ממשק משתמש ל-React יפה, מהירה ומודרנית.",
