--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -21,7 +21,7 @@
   "settings": "设置",
   "help-and-feedback": "帮助与反馈",
   "logout": "退出登录",
-  "heroui-com-homepage": "heroui.com 主页",
+  "site-homepage": "sctg.eu.org主页",
   "powered-by": "技术支持",
   "websites-regardless-of-your-design-experience": "无论您的设计经验如何，都能制作的网站。",
   "beautiful-fast-and-modern-react-ui-library": "美观、快速且现代化的 React UI 库。",
