feat: add tooltip support for table cells and update localization for screenshot prompt

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -150,5 +150,6 @@
   "oauth-id-added-successfully": "أضاف معرف Oauth بنجاح",
   "oauth-id-format-hint": "تلميح تنسيق معرف OAUTH",
   "please-enter-valid-oauth-id": "الرجاء إدخال معرف Oauth صالح",
-  "api-server": "خادم API"
+  "api-server": "خادم API",
+  "click-to-see-the-screenshot": "انقر لرؤية لقطة الشاشة"
 }
