--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -150,5 +150,6 @@
   "error-adding-oauth-id": "Error adding OAuth Id",
   "add-oauth-id-to": "Add OAuth Id",
   "oauth-id-format-hint": "Oauth Id Format Hint",
-  "api-server": "API server"
+  "api-server": "API server",
+  "click-to-see-the-screenshot": "Click to see the screenshot"
 }
