--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -157,5 +157,7 @@
   "cancel-this-purchase-and-return-the-item": "Cancel this purchase and return the item",
   "return-item": "Return item",
   "are-you-sure-you-want-to-return-this-item": "Are you sure you want to return this item ?",
-  "confirm": "Confirm"
+  "confirm": "Confirm",
+  "transaction-id": "Transaction ID",
+  "optional-transaction-id": "Optional transaction Id"
 }
