--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -159,5 +159,8 @@
   "are-you-sure-you-want-to-return-this-item": "Are you sure you want to return this item ?",
   "confirm": "Confirm",
   "transaction-id": "Transaction ID",
-  "optional-transaction-id": "Optional transaction Id"
+  "optional-transaction-id": "Optional transaction Id",
+  "utilities": "Utilities",
+  "oldest-ready-to-refund-pdf": "Oldest ready to refund (PDF)",
+  "oldest-ready-to-refund": "Oldest purchases ready for refund"
 }
