--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -162,5 +162,6 @@
   "transaction-id": "מזהה עסקה",
   "utilities": "כלי עזר",
   "oldest-ready-to-refund-pdf": "הוותיק ביותר מוכן להחזר (PDF)",
-  "oldest-ready-to-refund": "רכישות ישנות ביותר מוכנות להחזר"
+  "oldest-ready-to-refund": "רכישות ישנות ביותר מוכנות להחזר",
+  "oldest-ready-to-refund-description": "צור PDF עבור 10 הרכישות העתיקות ביותר שמוכנות להחזיר"
 }
