--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -162,5 +162,6 @@
   "transaction-id": "معرف المعاملة",
   "utilities": "المرافق",
   "oldest-ready-to-refund-pdf": "أقدم استعداد لاسترداد الأموال (PDF)",
-  "oldest-ready-to-refund": "أقدم عمليات الشراء جاهزة لاسترداد الأموال"
+  "oldest-ready-to-refund": "أقدم عمليات الشراء جاهزة لاسترداد الأموال",
+  "oldest-ready-to-refund-description": "قم بإنشاء ملف PDF لأقدم 10 عمليات شراء جاهزة لاستردادها"
 }
