--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -162,5 +162,6 @@
   "transaction-id": "ID de transacción",
   "utilities": "Utilidades",
   "oldest-ready-to-refund-pdf": "Más antiguo listo para reembolsar (PDF)",
-  "oldest-ready-to-refund": "Compras más antiguas listas para el reembolso"
+  "oldest-ready-to-refund": "Compras más antiguas listas para el reembolso",
+  "oldest-ready-to-refund-description": "Genere un PDF para las 10 compras más antiguas listas para ser reembolsadas"
 }
