feat: add loading text to multiple language files and update useEffect dependencies in OldestReadyToRefundPage

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -163,5 +163,6 @@
   "utilities": "المرافق",
   "oldest-ready-to-refund-pdf": "أقدم استعداد لاسترداد الأموال (PDF)",
   "oldest-ready-to-refund": "أقدم عمليات الشراء جاهزة لاسترداد الأموال",
-  "oldest-ready-to-refund-description": "قم بإنشاء ملف PDF لأقدم 10 عمليات شراء جاهزة لاستردادها"
+  "oldest-ready-to-refund-description": "قم بإنشاء ملف PDF لأقدم 10 عمليات شراء جاهزة لاستردادها",
+  "loading": "تحميل…"
 }
