--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -163,5 +163,6 @@
   "utilities": "Utilities",
   "oldest-ready-to-refund-pdf": "Oldest ready to refund (PDF)",
   "oldest-ready-to-refund": "Oldest purchases ready for refund",
-  "oldest-ready-to-refund-description": "Generate a PDF for the 10 oldest purchases ready to be refunded"
+  "oldest-ready-to-refund-description": "Generate a PDF for the 10 oldest purchases ready to be refunded",
+  "loading": "Loading…"
 }
