--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -163,5 +163,6 @@
   "utilities": "公用事业",
   "oldest-ready-to-refund-pdf": "最古老的准备退款（PDF）",
   "oldest-ready-to-refund": "最古老的购买准备退款",
-  "oldest-ready-to-refund-description": "为准备退款的10个最古老的购买生成PDF"
+  "oldest-ready-to-refund-description": "为准备退款的10个最古老的购买生成PDF",
+  "loading": "加载中…"
 }
