feat: add max number of items label to loading components in multiple language files

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -164,5 +164,6 @@
   "oldest-ready-to-refund-pdf": "أقدم استعداد لاسترداد الأموال (PDF)",
   "oldest-ready-to-refund": "أقدم عمليات الشراء جاهزة لاسترداد الأموال",
   "oldest-ready-to-refund-description": "قم بإنشاء ملف PDF لأقدم 10 عمليات شراء جاهزة لاستردادها",
-  "loading": "تحميل…"
+  "loading": "تحميل…",
+  "max-number-of-items": "كحد أقصى عدد العناصر"
 }
