--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -164,5 +164,6 @@
   "oldest-ready-to-refund-pdf": "Oldest ready to refund (PDF)",
   "oldest-ready-to-refund": "Oldest purchases ready for refund",
   "oldest-ready-to-refund-description": "Generate a PDF for the 10 oldest purchases ready to be refunded",
-  "loading": "Loading…"
+  "loading": "Loading…",
+  "max-number-of-items": "Max number of items"
 }
