--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -164,5 +164,6 @@
   "oldest-ready-to-refund-pdf": "Les plus anciens prêts à être remboursés (PDF)",
   "oldest-ready-to-refund": "Les plus anciens achats prêts à être remboursés",
   "oldest-ready-to-refund-description": "Générez un PDF pour les 10 plus anciens achats prêts à être remboursés",
-  "loading": "Chargement…"
+  "loading": "Chargement…",
+  "max-number-of-items": "Nombre maximal d'articles"
 }
