--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -164,5 +164,6 @@
   "oldest-ready-to-refund-pdf": "最古老的准备退款（PDF）",
   "oldest-ready-to-refund": "最古老的购买准备退款",
   "oldest-ready-to-refund-description": "为准备退款的10个最古老的购买生成PDF",
-  "loading": "加载中…"
+  "loading": "加载中…",
+  "max-number-of-items": "最大项目数"
 }
