feat: Add screenshot summary to purchases and related database updates
- Introduced `screenshot_summary` field in the Purchase model for optional text summaries of screenshots.
- Updated Prisma schema and Cloudflare D1 database to accommodate the new field.
- Modified SQL scripts to add the new column and update views accordingly.
- Enhanced the database access layer to handle the new field in CRUD operations.
- Updated API routes and types to reflect changes in the Purchase structure.
- Adjusted frontend code to utilize the new screenshot summary feature.

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -165,5 +165,6 @@
   "oldest-ready-to-refund": "أقدم عمليات الشراء جاهزة لاسترداد الأموال",
   "oldest-ready-to-refund-description": "قم بإنشاء ملف PDF لأقدم 10 عمليات شراء جاهزة لاستردادها",
   "loading": "تحميل…",
-  "max-number-of-items": "كحد أقصى عدد العناصر"
+  "max-number-of-items": "كحد أقصى عدد العناصر",
+  "receipt-screenshot_summary": "لقطة شاشة ملخص الاستلام (اختياري)"
 }
