--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -165,5 +165,6 @@
   "oldest-ready-to-refund": "Oldest purchases ready for refund",
   "oldest-ready-to-refund-description": "Generate a PDF for the 10 oldest purchases ready to be refunded",
   "loading": "Loading…",
-  "max-number-of-items": "Max number of items"
+  "max-number-of-items": "Max number of items",
+  "receipt-screenshot_summary": "Receipt summary screenshot (optional)"
 }
