--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -165,5 +165,6 @@
   "oldest-ready-to-refund": "Les plus anciens achats prêts à être remboursés",
   "oldest-ready-to-refund-description": "Générez un PDF pour les 10 plus anciens achats prêts à être remboursés",
   "loading": "Chargement…",
-  "max-number-of-items": "Nombre maximal d'articles"
+  "max-number-of-items": "Nombre maximal d'articles",
+  "receipt-screenshot_summary": "Capture d'écran du résumé de la réception (facultatif)"
 }
