--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -165,5 +165,6 @@
   "oldest-ready-to-refund": "רכישות ישנות ביותר מוכנות להחזר",
   "oldest-ready-to-refund-description": "צור PDF עבור 10 הרכישות העתיקות ביותר שמוכנות להחזיר",
   "loading": "טְעִינָה…",
-  "max-number-of-items": "מספר מקסימום של פריטים"
+  "max-number-of-items": "מספר מקסימום של פריטים",
+  "receipt-screenshot_summary": "צילום מסך של סיכום קבלה (אופציונלי)"
 }
