--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -166,5 +166,6 @@
   "oldest-ready-to-refund-description": "قم بإنشاء ملف PDF لأقدم 10 عمليات شراء جاهزة لاستردادها",
   "loading": "تحميل…",
   "max-number-of-items": "كحد أقصى عدد العناصر",
-  "receipt-screenshot_summary": "لقطة شاشة ملخص الاستلام (اختياري)"
+  "receipt-screenshot_summary": "لقطة شاشة ملخص الاستلام (اختياري)",
+  "read-only": "اقرأ فقط"
 }
