--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -167,5 +167,7 @@
   "loading": "טְעִינָה…",
   "max-number-of-items": "מספר מקסימום של פריטים",
   "receipt-screenshot_summary": "צילום מסך של סיכום קבלה (אופציונלי)",
-  "read-only": "קרא רק"
+  "read-only": "קרא רק",
+  "statistics": "סטָטִיסטִיקָה",
+  "coming-soon": "בקרוב ..."
 }
