--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -167,5 +167,7 @@
   "loading": "تحميل…",
   "max-number-of-items": "كحد أقصى عدد العناصر",
   "receipt-screenshot_summary": "لقطة شاشة ملخص الاستلام (اختياري)",
-  "read-only": "اقرأ فقط"
+  "read-only": "اقرأ فقط",
+  "statistics": "إحصائيات",
+  "coming-soon": "قريباً…"
 }
