feat: add refund and delay statistics translations for multiple languages

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -169,5 +169,32 @@
   "receipt-screenshot_summary": "لقطة شاشة ملخص الاستلام (اختياري)",
   "read-only": "اقرأ فقط",
   "statistics": "إحصائيات",
-  "coming-soon": "قريباً…"
+  "coming-soon": "قريباً…",
+  "average-delay": "متوسط ​​التأخير",
+  "average-refund-delay": "متوسط ​​التأخير استرداد المبلغ",
+  "bar-chart": "مخطط بار",
+  "based-on-count": "على أساس العد",
+  "credit": "ائتمان",
+  "data-based-on-refunds": "البيانات القائمة على المبالغ المستردة",
+  "days": "أيام",
+  "debit": "دَين",
+  "delay-days": "تأخير (أيام)",
+  "delay-target": "هدف التأخير",
+  "difference": "اختلاف",
+  "largest-refund": "أكبر استرداد",
+  "latest-refund": "آخر استرداد",
+  "line-chart": "مخطط خط",
+  "no-refund-data-available": "لا توجد بيانات استرداد متاحة",
+  "purchase-amount": "مبلغ الشراء",
+  "refund-amount": "مبلغ استرداد",
+  "refund-balance": "رد الرصيد",
+  "refund-delay-analysis": "استرداد تحليل التأخير",
+  "refund-delay-chart": "استرداد الرسم البياني تأخير",
+  "refund-delay-days": "تأخير استرداد الأموال (أيام)",
+  "refund-delay-details": "تفاصيل التأخير استرداد المبلغ",
+  "refund-progress": "استرداد التقدم",
+  "statistics-dashboard": "إحصائيات لوحة القيادة",
+  "total-purchases": "إجمالي عمليات الشراء",
+  "total-refunds": "المبالغ المستردة الكلية",
+  "total-refunds-count": "إجمالي عدد المبالغ المستردة"
 }
