--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -169,5 +169,32 @@
   "receipt-screenshot_summary": "Receipt summary screenshot (optional)",
   "read-only": "Read only",
   "statistics": "Statistics",
-  "coming-soon": "Coming soon…"
+  "coming-soon": "Coming soon…",
+  "refund-delay-days": "refund delay (days)",
+  "purchase-amount": "purchase amount",
+  "refund-amount": "refund amount",
+  "delay-days": "delay (days)",
+  "refund-delay-analysis": "refund delay analysis",
+  "days": "days",
+  "refund-delay-chart": "refund delay chart",
+  "line-chart": "line chart",
+  "bar-chart": "bar chart",
+  "no-refund-data-available": "no refund data available",
+  "data-based-on-refunds": "data based on refunds",
+  "average-delay": "average delay",
+  "statistics-dashboard": "statistics dashboard",
+  "credit": "credit",
+  "debit": "debit",
+  "refund-balance": "refund balance",
+  "total-purchases": "total purchases",
+  "total-refunds": "total refunds",
+  "refund-progress": "refund progress",
+  "average-refund-delay": "average refund delay",
+  "based-on-count": "based on count",
+  "delay-target": "delay target",
+  "total-refunds-count": "total refunds count",
+  "latest-refund": "latest refund",
+  "largest-refund": "largest refund",
+  "refund-delay-details": "refund delay details",
+  "difference": "difference"
 }
