--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -169,5 +169,32 @@
   "receipt-screenshot_summary": "Captura de pantalla de resumen de recibo (opcional)",
   "read-only": "Solo lectura",
   "statistics": "Estadística",
-  "coming-soon": "Muy pronto…"
+  "coming-soon": "Muy pronto…",
+  "average-delay": "retraso promedio",
+  "average-refund-delay": "Retraso de reembolso promedio",
+  "bar-chart": "gráfico de barras",
+  "based-on-count": "Basado en el recuento",
+  "credit": "crédito",
+  "data-based-on-refunds": "datos basados ​​en reembolsos",
+  "days": "días",
+  "debit": "débito",
+  "delay-days": "retraso (días)",
+  "delay-target": "objetivo de retraso",
+  "difference": "diferencia",
+  "largest-refund": "reembolso más grande",
+  "latest-refund": "Último reembolso",
+  "line-chart": "gráfico de línea",
+  "no-refund-data-available": "No hay datos de reembolso disponibles",
+  "purchase-amount": "monto de compra",
+  "refund-amount": "monto de reembolso",
+  "refund-balance": "saldo de reembolso",
+  "refund-delay-analysis": "Análisis de retraso de reembolso",
+  "refund-delay-chart": "Gráfico de retraso de reembolso",
+  "refund-delay-days": "Retraso de reembolso (días)",
+  "refund-delay-details": "Detalles de retraso de reembolso",
+  "refund-progress": "reembolso del progreso",
+  "statistics-dashboard": "Panel de estadísticas",
+  "total-purchases": "compras totales",
+  "total-refunds": "reembolsos totales",
+  "total-refunds-count": "Cuento total de reembolsos"
 }
