--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -169,5 +169,32 @@
   "receipt-screenshot_summary": "Capture d'écran du résumé de la réception (facultatif)",
   "read-only": "Lecture seule",
   "statistics": "Statistiques",
-  "coming-soon": "À venir…"
+  "coming-soon": "À venir…",
+  "average-delay": "retard moyen",
+  "average-refund-delay": "délai de remboursement moyen",
+  "bar-chart": "graphique à barres",
+  "based-on-count": "basé sur le décompte",
+  "credit": "crédit",
+  "data-based-on-refunds": "données basées sur les remboursements",
+  "days": "jours",
+  "debit": "débit",
+  "delay-days": "délai (jours)",
+  "delay-target": "délai cible",
+  "difference": "différence",
+  "largest-refund": "remboursement le plus élevé",
+  "latest-refund": "dernier remboursement",
+  "line-chart": "graphique en lignes",
+  "no-refund-data-available": "Aucune donnée de remboursement disponible",
+  "purchase-amount": "Montant d'achat",
+  "refund-amount": "montant du remboursement",
+  "refund-balance": "balance de remboursement",
+  "refund-delay-analysis": "Analyse des retards de remboursement",
+  "refund-delay-chart": "Tableau de delai de remboursement",
+  "refund-delay-days": "retard de remboursement (jours)",
+  "refund-delay-details": "Détails des délais de remboursement",
+  "refund-progress": "progression des remboursements",
+  "statistics-dashboard": "Tableau de bord statistiques",
+  "total-purchases": "Achats totaux",
+  "total-refunds": "remboursements totaux",
+  "total-refunds-count": "Nombre de remboursements totaux"
 }
