--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -169,5 +169,32 @@
   "receipt-screenshot_summary": "צילום מסך של סיכום קבלה (אופציונלי)",
   "read-only": "קרא רק",
   "statistics": "סטָטִיסטִיקָה",
-  "coming-soon": "בקרוב ..."
+  "coming-soon": "בקרוב ...",
+  "average-delay": "עיכוב ממוצע",
+  "average-refund-delay": "עיכוב החזר כספי ממוצע",
+  "bar-chart": "תרשים עמודות",
+  "based-on-count": "מבוסס על ספירה",
+  "credit": "אַשׁרַאי",
+  "data-based-on-refunds": "נתונים המבוססים על החזרים כספיים",
+  "days": "ימים",
+  "debit": "חוֹבָה",
+  "delay-days": "עיכוב (ימים)",
+  "delay-target": "יעד לעיכוב",
+  "difference": "הֶבדֵל",
+  "largest-refund": "ההחזר הגדול ביותר",
+  "latest-refund": "ההחזר האחרון",
+  "line-chart": "תרשים קו",
+  "no-refund-data-available": "אין נתוני החזר כספי זמינים",
+  "purchase-amount": "סכום רכישה",
+  "refund-amount": "סכום החזר כספי",
+  "refund-balance": "איזון החזר כספי",
+  "refund-delay-analysis": "ניתוח עיכוב החזר",
+  "refund-delay-chart": "תרשים עיכוב החזר",
+  "refund-delay-days": "עיכוב החזר (ימים)",
+  "refund-delay-details": "פרטי עיכוב החזר",
+  "refund-progress": "החזר התקדמות",
+  "statistics-dashboard": "לוח המחוונים הסטטיסטי",
+  "total-purchases": "סה\"כ רכישות",
+  "total-refunds": "סה\"כ החזרים כספיים",
+  "total-refunds-count": "סך ההחזרים הספורים"
 }
