--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -169,5 +169,32 @@
   "receipt-screenshot_summary": "收据摘要屏幕截图（可选）",
   "read-only": "只读",
   "statistics": "统计数据",
-  "coming-soon": "即将推出…"
+  "coming-soon": "即将推出…",
+  "average-delay": "平均延迟",
+  "average-refund-delay": "平均退款延迟",
+  "bar-chart": "条形图",
+  "based-on-count": "基于计数",
+  "credit": "信用",
+  "data-based-on-refunds": "基于退款的数据",
+  "days": "天",
+  "debit": "借方",
+  "delay-days": "延迟（天数）",
+  "delay-target": "延迟目标",
+  "difference": "不同之处",
+  "largest-refund": "最大的退款",
+  "latest-refund": "最新退款",
+  "line-chart": "线图",
+  "no-refund-data-available": "没有可用的退款数据",
+  "purchase-amount": "购买金额",
+  "refund-amount": "退款金额",
+  "refund-balance": "退款余额",
+  "refund-delay-analysis": "退款延迟分析",
+  "refund-delay-chart": "退款延迟图",
+  "refund-delay-days": "退款延迟（天）",
+  "refund-delay-details": "退款延迟详细信息",
+  "refund-progress": "退款进展",
+  "statistics-dashboard": "统计仪表板",
+  "total-purchases": "总购买",
+  "total-refunds": "总退款",
+  "total-refunds-count": "总退款数量"
 }
