--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -192,9 +192,10 @@
   "refund-delay-chart": "Tableau de delai de remboursement",
   "refund-delay-days": "retard de remboursement (jours)",
   "refund-delay-details": "Détails des délais de remboursement",
-  "refund-progress": "progression des remboursements",
+  "refund-progress": "Progression des remboursement (nb. non remboursés / nb. achats)",
   "statistics-dashboard": "Tableau de bord statistiques",
   "total-purchases": "Achats totaux",
   "total-refunds": "remboursements totaux",
-  "total-refunds-count": "Nombre de remboursements totaux"
+  "total-refunds-count": "Nombre de remboursements totaux",
+  "outstanding-amount": "encours"
 }
