fix: update French translations for receipt screenshot and order summary

--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -143,7 +143,7 @@
   "please-upload-receipt-screenshot": "Veuillez télécharger la capture d'écran de réception",
   "purchase-created-successfully": "Achat créé avec succès",
   "purchase-date": "Date d'achat",
-  "receipt-screenshot": "Capture d'écran de réception",
+  "receipt-screenshot": "Capture d'écran de la confirmation",
   "receipt-screenshot-required": "Capture d'écran requise requise",
   "add-oauth-id-to": "Ajouter ID OAuth",
   "error-adding-oauth-id": "Erreur ajoutant ID OAuth",
@@ -166,7 +166,7 @@
   "oldest-ready-to-refund-description": "Générez un PDF pour les 10 plus anciens achats prêts à être remboursés",
   "loading": "Chargement…",
   "max-number-of-items": "Nombre maximal d'articles",
-  "receipt-screenshot_summary": "Capture d'écran du résumé de la réception (facultatif)",
+  "receipt-screenshot_summary": "Capture d'écran du résumé de la commande (facultatif)",
   "read-only": "Lecture seule",
   "statistics": "Statistiques",
   "coming-soon": "À venir…",
