--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -170,7 +170,7 @@
   "read-only": "Lecture seule",
   "statistics": "Statistiques",
   "coming-soon": "À venir…",
-  "average-delay": "retard moyen",
+  "average-delay": "délai moyen",
   "average-refund-delay": "délai de remboursement moyen",
   "bar-chart": "graphique à barres",
   "based-on-count": "basé sur le décompte",
@@ -188,11 +188,11 @@
   "purchase-amount": "Montant d'achat",
   "refund-amount": "montant du remboursement",
   "refund-balance": "balance de remboursement",
-  "refund-delay-analysis": "Analyse des retards de remboursement",
-  "refund-delay-chart": "Tableau de delai de remboursement",
+  "refund-delay-analysis": "Analyse des délais de remboursement",
+  "refund-delay-chart": "Tableau de délai de remboursement",
   "refund-delay-days": "retard de remboursement (jours)",
   "refund-delay-details": "Détails des délais de remboursement",
-  "refund-progress": "Progression des remboursement (nb. non remboursés / nb. achats)",
+  "refund-progress": "Progression des remboursements (nb. non remboursés / nb. achats)",
   "statistics-dashboard": "Tableau de bord statistiques",
   "total-purchases": "Achats totaux",
   "total-refunds": "remboursements totaux",
